--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,13 @@
 <resources>
-    <string name="app_name">Popular Movies</string>
+    <string name="app_name">Pop Movies</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_detail">MovieDetail</string>
+
+    <!--Preferences-->
+    <string name="pref_label">Sort movies by:</string>
+    <string name="pref_valuePopularity">Most popular first</string>
+    <string name="pref_valueRating">Highest rated first</string>
+    <string name="pref_key" translatable="false">sort_by</string>
+    <string name="pref_keyPopularity" translatable="false">popularity.desc</string>
+    <string name="pref_keyRating" translatable="false">vote_average.desc</string>
 </resources>
